Fix overflowing actions

--- a/client/my-sites/plugins/plugin-meta/style.scss
+++ b/client/my-sites/plugins/plugin-meta/style.scss
@@ -65,6 +65,7 @@
 .plugin-meta__detail {
 	position: relative;
 	flex-grow: 1;
+	min-width: 0;
 }
 
 .plugin-meta__upgrade_nudge .upgrade-nudge.card {
@@ -94,6 +95,7 @@
 .plugin-meta__actions {
 	border-top: 1px solid lighten( $gray, 30% );
 	flex-grow: 1;
+	flex-shrink: 0;
 	margin-top: 16px;
 	padding-top: 16px;
 
